force-app/main/default/objects/On_boarding_Task__c/On_boarding_Task__c.object-meta.xml
<CustomObject>
    <label>Onboarding Step</label>
    <nameField>
        <label>Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onboarding Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>