force-app/main/default/objects/On_boarding_Task__c/fields/Auto_Assign_del__c.field-meta.xml
<CustomField>
    <fullName>Auto_Assign_del__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Assign</label>
    <type>Checkbox</type>
</CustomField>