force-app/main/default/objects/On_boarding_Task__c/fields/Flow_Name__c.field-meta.xml
<CustomField>
    <fullName>Flow_Name__c</fullName>
    <defaultValue>&quot;Employee_Basic_Info&quot;</defaultValue>
    <inlineHelpText>Flow API Name</inlineHelpText>
    <label>Flow Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>