force-app/main/default/objects/On_boarding_Task__c/fields/Quantifiable__c.field-meta.xml
<CustomField>
    <fullName>Quantifiable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quantifiable</label>
    <type>Checkbox</type>
</CustomField>