force-app/main/default/objects/On_boarding_Task__c/recordTypes/Operational.recordType-meta.xml
<RecordType>
    <fullName>Operational</fullName>
    <active>true</active>
    <label>Operational</label>
</RecordType>