force-app/main/default/objects/On_boarding_Task__c/listViews/All_Business_Tasks.listView-meta.xml
<ListView>
    <fullName>All_Business_Tasks</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>On_boarding_Task__c.Business</value>
    </filters>
    <label>All Business Tasks</label>
</ListView>